--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,5 +1,8 @@
-html,
-body {
+
+$primary-color: #0070f3;
+$secondary-color: #eaeaea;
+
+html, body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -33,7 +36,7 @@ a {
   display: flex;
   flex: 1;
   padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
+  border-top: 1px solid $secondary-color;
   justify-content: center;
   align-items: center;
 }
@@ -46,7 +49,7 @@ a {
 }
 
 .title a {
-  color: #0070f3;
+  color: $primary-color;
   text-decoration: none;
 }
 
@@ -96,28 +99,28 @@ a {
   text-align: left;
   color: inherit;
   text-decoration: none;
-  border: 1px solid #eaeaea;
+  border: 1px solid $secondary-color;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   max-width: 300px;
-}
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
-}
+  &:hover,
+  &:focus,
+  &:active {
+    color: $primary-color;
+    border-color: $primary-color;
+  }
 
-.card h2 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
-}
+  h2 {
+    margin: 0 0 1rem 0;
+    font-size: 1.5rem;
+  }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+  p {
+    margin: 0;
+    font-size: 1.25rem;
+    line-height: 1.5;
+  }
 }
 
 .logo {
@@ -127,12 +130,11 @@ a {
 
 .modalOverlay {
   display: none;
-}
 
-.modalOverlay.active {
-  display: block;
+  &.active {
+    display: block;
+  }
 }
-
 
 @media (max-width: 600px) {
   .grid {
@@ -145,24 +147,22 @@ a {
   html {
     color-scheme: dark;
   }
+
   body {
     color: white;
     background: black;
   }
-}
 
-
-@media (prefers-color-scheme: dark) {
   .card,
   .footer {
     border-color: #222;
   }
+
   .code {
     background: #111;
   }
+
   .logo img {
     filter: invert(1);
   }
 }
-
-
